--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Server Side React App for ticketify",
   "main": "index.js",
   "scripts": {
     "dev": "next"
